Actualizo descripción de la galería

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -59,7 +59,17 @@
     <!-- Contenido principal -->
     <main>
         <h1>Productos</h1>
-        <p>Las ranas no se venden.😡</p>
+        <p>Bienvenido a la Galería de la Campaña, un lugar donde se capturan los momentos más épicos y memorables de
+            nuestra aventura en Mythralia. Aquí encontrarás una colección de imágenes que ilustran los eventos clave,
+            las batallas feroces, y los lugares mágicos y misteriosos que hemos explorado.
+
+            Desde las majestuosas torres de la capital hasta los oscuros calabozos llenos de peligros, cada imagen
+            cuenta una historia y ofrece un vistazo a la rica y diversa historia de nuestra campaña. Esta galería no
+            solo celebra nuestros triunfos y desafíos, sino también la belleza y el misterio de los vastos paisajes y
+            las criaturas fascinantes que habitan este reino.
+
+            Explora la galería y revive los momentos que definen nuestra aventura. Déjate inspirar por las escenas de
+            coraje, amistad y magia que componen la esencia de Mythralia.</p>
         <div class="galeria">
             <div class="grid-item1">
                 <img src="../img/rana-grid1.jpg">
