--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -59,7 +59,7 @@
     <!-- Contenido principal -->
     <main>
         <h1>Productos</h1>
-        <p>Bienvenido a la Galería de la Campaña, un lugar donde se capturan los momentos más épicos y memorables de
+        <h2>Bienvenido a la Galería de la Campaña, un lugar donde se capturan los momentos más épicos y memorables de
             nuestra aventura en Mythralia. Aquí encontrarás una colección de imágenes que ilustran los eventos clave,
             las batallas feroces, y los lugares mágicos y misteriosos que hemos explorado.
 
@@ -69,34 +69,34 @@
             las criaturas fascinantes que habitan este reino.
 
             Explora la galería y revive los momentos que definen nuestra aventura. Déjate inspirar por las escenas de
-            coraje, amistad y magia que componen la esencia de Mythralia.</p>
+            coraje, amistad y magia que componen la esencia de Mythralia.</h2>
         <div class="galeria">
             <div class="grid-item1">
-                <img src="../img/rana-grid1.jpg">
+                <img src="../img/highlights/Default_Adventurers_skirmishing_with_a_wyvern_in_a_narrow_moun_0.jpg">
             </div>
             <div class="grid-item2">
-                <img src="../img/rana-grid2.jpg">
+                <img src="../img/highlights/Default_Adventurers_uncovering_longforgotten_ruins_in_a_dense_3.jpg">
             </div>
             <div class="grid-item3">
-                <img src="../img/rana-grid3.jpg">
+                <img src="../img/highlights/Default_A_chilling_encounter_in_the_Haunted_Woods_with_adventu_1.jpg">
             </div>
             <div class="grid-item4">
-                <img src="../img/rana-grid4.jpg">
+                <img src="../img/highlights/Default_A_majestic_coronation_ceremony_in_the_grand_palace_of_3.jpg">
             </div>
             <div class="grid-item5">
-                <img src="../img/rana-grid5.jpg">
+                <img src="../img/highlights/Default_An_epic_clash_between_armies_in_the_snowcapped_Crystal_1.jpg">
             </div>
             <div class="grid-item6">
-                <img src="../img/rana-grid6.jpg">
+                <img src="../img/highlights/Default_Produce_an_image_of_a_tabaxi_bard_with_feline_features_3.jpg">
             </div>
             <div class="grid-item7">
-                <img src="../img/rana-grid7.jpg">
+                <img src="../img/highlights/Default_A_dramatic_confrontation_in_the_lush_Royal_Gardens_wit_1.jpg">
             </div>
             <div class="grid-item8">
-                <img src="../img/rana-grid8.jpg">
+                <img src="../img/highlights/Default_A_tense_encounter_with_a_naga_in_the_overgrown_jungle_1.jpg">
             </div>
             <div class="grid-item9">
-                <img src="../img/rana-grid9.jpg">
+                <img src="../img/highlights/Default_A_solemn_ceremony_under_the_full_moon_where_druids_and_0.jpg">
             </div>
         </div>
     </main>
