arreglos de galeria

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -58,12 +58,12 @@
 
     <!-- Contenido principal -->
     <main>
-        <h1>Productos</h1>
+        <h1>Galería</h1>
         <h2>Bienvenido a la Galería de la Campaña, un lugar donde se capturan los momentos más épicos y memorables de
             nuestra aventura en Mythralia. Aquí encontrarás una colección de imágenes que ilustran los eventos clave,
             las batallas feroces, y los lugares mágicos y misteriosos que hemos explorado.
 
-            Desde las majestuosas torres de la capital hasta los oscuros calabozos llenos de peligros, cada imagen
+            Desde las majestuosas montañas nevadas hasta los oscuros bosques llenos de peligros, cada imagen
             cuenta una historia y ofrece un vistazo a la rica y diversa historia de nuestra campaña. Esta galería no
             solo celebra nuestros triunfos y desafíos, sino también la belleza y el misterio de los vastos paisajes y
             las criaturas fascinantes que habitan este reino.
