--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <ul class="menu">
             <li><a href="./pages/historia.html">HISTORIA</a></li>
             <li><a href="./pages/razas.html">RAZAS Y CLASES</a></li>
-            <li><a href="./pages/galeria.html">GALERIA DE PERSONAJES</a></li>
+            <li><a href="./pages/galeria.html">GALERÍA DE AVENTURAS</a></li>
             <li><a href="./pages/contacto.html">ÚNETE A LA CAMPAÑA!</a></li>
         </ul>
     </nav>
