--- a/pages/razas.html
+++ b/pages/razas.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ofertas</title>
+    <title>Razas y clases</title>
     <link rel="stylesheet" href="../css/Style.css">
 </head>
 
@@ -44,7 +44,7 @@
         <ul class="menu">
             <li><a href="../index.html">INICIO</a></li>
             <li><a href="../pages/historia.html">HISTORIA</a></li>
-            <li><a href="../pages/galeria.html">GALERIA DE PERSONAJES</a></li>
+            <li><a href="../pages/galeria.html">GALERÍA DE AVENTURAS</a></li>
             <li><a href="../pages/contacto.html">ÚNETE A LA CAMPAÑA!</a></li>
         </ul>
     </nav>
