--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -45,7 +45,7 @@
             <li><a href="../index.html">INICIO</a></li>
             <li><a href="../pages/historia.html">HISTORIA</a></li>
             <li><a href="../pages/razas.html">RAZAS Y CLASES</a></li>
-            <li><a href="../pages/galeria.html">GALERIA DE PERSONAJES</a></li>
+            <li><a href="../pages/galeria.html">GALERÍA DE AVENTURAS</a></li>
         </ul>
     </nav>
 
