--- a/pages/historia.html
+++ b/pages/historia.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros</title>
+    <title>Historia</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/Style.css   ">
@@ -49,7 +49,7 @@
         <ul class="menu">
             <li><a href="../index.html">INICIO</a></li>
             <li><a href="../pages/razas.html">RAZAS Y CLASES</a></li>
-            <li><a href="../pages/galeria.html">GALERIA DE PERSONAJES</a></li>
+            <li><a href="../pages/galeria.html">GALERÍA DE AVENTURAS</a></li>
             <li><a href="../pages/contacto.html">ÚNETE A LA CAMPAÑA!</a></li>
         </ul>
     </nav>
