Actualización de SASS

--- a/pages/razas.html
+++ b/pages/razas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Razas y clases</title>
-    <link rel="stylesheet" href="../css/Style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 
 <body>
@@ -67,7 +67,7 @@
                 de Mythralia tiene un papel crucial en la riqueza y diversidad de este reino.</h2>
 
             <div class="card-container">
-                <h2>Razas</h2>
+                <h2 class="highlighted-title">Razas</h2>
                 <div class="card">
                     <img src="../img/razas-clases/razas/Default_A_noble_human_of_Mythralia_dressed_in_intricate_armor_1.jpg"
                         alt="Humano">
@@ -144,7 +144,7 @@
             </div>
 
             <div class="card-container">
-                <h2>Clases</h2>
+                <h2 class="highlighted-title">Clases</h2>
                 <div class="card">
                     <img src="../img/razas-clases/clases/Default_A_formidable_warrior_of_Mythralia_an_elf_wielding_a_gl_1.jpg"
                         alt="Guerrero">
