--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Principal</title>
+    <meta name="description" content="Explora la rica historia, personajes épicos y lugares mágicos de la campaña de Mythralia en nuestra página dedicada a Dungeons & Dragons. Únete a la aventura." />
+    <meta name="keywords" content="Mythralia, Dungeons & Dragons, campaña, historia, personajes, razas, clases, aventura, RPG, rol, fantasía, magia, batallas, exploración, héroes, criaturas, mitología, épico" />
+    <title>Mythralia | Campaña de Dungeons and Dragons</title>
     <link rel="stylesheet" href="./css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -52,16 +55,6 @@
         </ul>
     </nav>
 
-    <script>
-        // Toggle mobile menu
-        document.querySelector('.hamburger').addEventListener('click', function () {
-            document.querySelector('.menu').classList.toggle('show');
-        });
-    </script>
-</body>
-
-</html>
-
 <!-- Contenido principal -->
 <main class="hero">
     <h1>¡Embárcate en una Épica Aventura en el Reino de Mythralia!</h1>
@@ -86,6 +79,14 @@
 <footer>
     <p>&copy; 2024 Gabriel Boetto. Todos los derechos reservados.</p>
 </footer>
+
+<script>
+    // Toggle mobile menu
+    document.querySelector('.hamburger').addEventListener('click', function () {
+        document.querySelector('.menu').classList.toggle('show');
+    });
+</script>
+
 </body>
 
 </html>
