--- a/pages/historia.html
+++ b/pages/historia.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Historia</title>
+    <meta name="description" content="Explora la rica historia, personajes épicos y lugares mágicos de la campaña de Mythralia en nuestra página dedicada a Dungeons & Dragons. Únete a la aventura." />
+    <meta name="keywords" content="Mythralia, Dungeons & Dragons, campaña, historia, personajes, razas, clases, aventura, RPG, rol, fantasía, magia, batallas, exploración, héroes, criaturas, mitología, épico" />
+    <title>Historia de Mythralia</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css   ">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -54,12 +54,6 @@
         </ul>
     </nav>
 
-    <script>
-        // Toggle mobile menu
-        document.querySelector('.hamburger').addEventListener('click', function () {
-            document.querySelector('.menu').classList.toggle('show');
-        });
-    </script>
 
     <!-- Contenido principal -->
     <main class="lore">
@@ -135,6 +129,17 @@
     <footer>
         <p>&copy; 2024 Gabriel Boetto. Todos los derechos reservados.</p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script>
+        // Toggle mobile menu
+        document.querySelector('.hamburger').addEventListener('click', function () {
+            document.querySelector('.menu').classList.toggle('show');
+        });
+    </script>
+
 </body>
 
 </html>
