--- a/pages/razas.html
+++ b/pages/razas.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Razas y clases</title>
+    <meta name="description" content="Explora la rica historia, personajes épicos y lugares mágicos de la campaña de Mythralia en nuestra página dedicada a Dungeons & Dragons. Únete a la aventura." />
+    <meta name="keywords" content="Mythralia, Dungeons & Dragons, campaña, historia, personajes, razas, clases, aventura, RPG, rol, fantasía, magia, batallas, exploración, héroes, criaturas, mitología, épico" />
+    <title>Razas y clases de Mythralia</title>
     <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -49,12 +52,6 @@
         </ul>
     </nav>
 
-    <script>
-        // Toggle mobile menu
-        document.querySelector('.hamburger').addEventListener('click', function () {
-            document.querySelector('.menu').classList.toggle('show');
-        });
-    </script>
 
     <!-- Contenido principal -->
     <main>
@@ -236,6 +233,14 @@
     <footer>
         <p>&copy; 2024 Gabriel Boetto. Todos los derechos reservados.</p>
     </footer>
+
+    <script>
+        // Toggle mobile menu
+        document.querySelector('.hamburger').addEventListener('click', function () {
+            document.querySelector('.menu').classList.toggle('show');
+        });
+    </script>
+
 </body>
 
 </html>
