--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explora la rica historia, personajes épicos y lugares mágicos de la campaña de Mythralia en nuestra página dedicada a Dungeons & Dragons. Únete a la aventura." />
-    <meta name="keywords" content="Mythralia, Dungeons & Dragons, campaña, historia, personajes, razas, clases, aventura, RPG, rol, fantasía, magia, batallas, exploración, héroes, criaturas, mitología, épico" />
+    <meta name="description"
+        content="Explora la rica historia, personajes épicos y lugares mágicos de la campaña de Mythralia en nuestra página dedicada a Dungeons & Dragons. Únete a la aventura." />
+    <meta name="keywords"
+        content="Mythralia, Dungeons & Dragons, campaña, historia, personajes, razas, clases, aventura, RPG, rol, fantasía, magia, batallas, exploración, héroes, criaturas, mitología, épico" />
     <title>Únete a la campaña!</title>
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
@@ -108,17 +110,17 @@
         </div>
     </section>
 
-<!-- Footer -->
-<footer>
-    <p>&copy; 2024 Gabriel Boetto. Todos los derechos reservados.</p>
-</footer>
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Gabriel Boetto. Todos los derechos reservados.</p>
+    </footer>
 
-<script>
-    // Toggle mobile menu
-    document.querySelector('.hamburger').addEventListener('click', function () {
-        document.querySelector('.menu').classList.toggle('show');
-    });
-</script>
+    <script>
+        // Toggle mobile menu
+        document.querySelector('.hamburger').addEventListener('click', function () {
+            document.querySelector('.menu').classList.toggle('show');
+        });
+    </script>
 
 </body>
 
