--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explora la rica historia, personajes épicos y lugares mágicos de la campaña de Mythralia en nuestra página dedicada a Dungeons & Dragons. Únete a la aventura." />
-    <meta name="keywords" content="Mythralia, Dungeons & Dragons, campaña, historia, personajes, razas, clases, aventura, RPG, rol, fantasía, magia, batallas, exploración, héroes, criaturas, mitología, épico" />
+    <meta name="description"
+        content="Explora la rica historia, personajes épicos y lugares mágicos de la campaña de Mythralia en nuestra página dedicada a Dungeons & Dragons. Únete a la aventura." />
+    <meta name="keywords"
+        content="Mythralia, Dungeons & Dragons, campaña, historia, personajes, razas, clases, aventura, RPG, rol, fantasía, magia, batallas, exploración, héroes, criaturas, mitología, épico" />
     <title>Mythralia | Campaña de Dungeons and Dragons</title>
     <link rel="stylesheet" href="./css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -55,37 +57,41 @@
         </ul>
     </nav>
 
-<!-- Contenido principal -->
-<main class="hero">
-    <h1>¡Embárcate en una Épica Aventura en el Reino de Mythralia!</h1>
-    <h2>Bienvenido a la página oficial de la campaña de Mythralia de Dungeons & Dragons, donde los héroes nacen de la leyenda y las
-        leyendas se convierten en realidad. Sumérgete en un mundo de magia ancestral y peligros insondables, donde cada
-        decisión forjará tu destino. Desde las profundidades de los calabozos olvidados hasta los picos nevados de las
-        montañas prohibidas, tu valor será puesto a prueba. ¡Únete a nosotros y descubre qué leyendas te esperan!</h2>
-    <div class="slider-frame">
-        <ul>
-            <li><img src="./img/Default_A_tall_spiraling_tower_glowing_with_magical_energy_Sma_1.jpg" alt=""></li>
-            <li><img src="./img/Default_A_dense_mystical_forest_with_towering_ancient_trees_gl_1.jpg" alt=""></li>
-            <li><img src="./img/Default_A_bustling_dwarven_forge_with_glowing_furnaces_clangin_2.jpg" alt=""></li>
-            <li><img src="./img/Default_A_vast_ancient_library_with_towering_bookshelves_magic_2.jpg" alt=""></li>
-        </ul>
-    </div>
-    <audio controls autoplay>
-        <source src="./music/epic-dnd-music.mp3">
-    </audio>
-</main>
+    <!-- Contenido principal -->
+    <main class="hero">
+        <h1>¡Embárcate en una Épica Aventura en el Reino de Mythralia!</h1>
+        <h2>Bienvenido a la página oficial de la campaña de Mythralia de Dungeons & Dragons, donde los héroes nacen de
+            la leyenda y las
+            leyendas se convierten en realidad. Sumérgete en un mundo de magia ancestral y peligros insondables, donde
+            cada
+            decisión forjará tu destino. Desde las profundidades de los calabozos olvidados hasta los picos nevados de
+            las
+            montañas prohibidas, tu valor será puesto a prueba. ¡Únete a nosotros y descubre qué leyendas te esperan!
+        </h2>
+        <div class="slider-frame">
+            <ul>
+                <li><img src="./img/Default_A_tall_spiraling_tower_glowing_with_magical_energy_Sma_1.jpg" alt=""></li>
+                <li><img src="./img/Default_A_dense_mystical_forest_with_towering_ancient_trees_gl_1.jpg" alt=""></li>
+                <li><img src="./img/Default_A_bustling_dwarven_forge_with_glowing_furnaces_clangin_2.jpg" alt=""></li>
+                <li><img src="./img/Default_A_vast_ancient_library_with_towering_bookshelves_magic_2.jpg" alt=""></li>
+            </ul>
+        </div>
+        <audio controls autoplay>
+            <source src="./music/epic-dnd-music.mp3">
+        </audio>
+    </main>
 
-<!-- Footer -->
-<footer>
-    <p>&copy; 2024 Gabriel Boetto. Todos los derechos reservados.</p>
-</footer>
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Gabriel Boetto. Todos los derechos reservados.</p>
+    </footer>
 
-<script>
-    // Toggle mobile menu
-    document.querySelector('.hamburger').addEventListener('click', function () {
-        document.querySelector('.menu').classList.toggle('show');
-    });
-</script>
+    <script>
+        // Toggle mobile menu
+        document.querySelector('.hamburger').addEventListener('click', function () {
+            document.querySelector('.menu').classList.toggle('show');
+        });
+    </script>
 
 </body>
 
