--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explora la rica historia, personajes épicos y lugares mágicos de la campaña de Mythralia en nuestra página dedicada a Dungeons & Dragons. Únete a la aventura." />
-    <meta name="keywords" content="Mythralia, Dungeons & Dragons, campaña, historia, personajes, razas, clases, aventura, RPG, rol, fantasía, magia, batallas, exploración, héroes, criaturas, mitología, épico" />
+    <meta name="description"
+        content="Explora la rica historia, personajes épicos y lugares mágicos de la campaña de Mythralia en nuestra página dedicada a Dungeons & Dragons. Únete a la aventura." />
+    <meta name="keywords"
+        content="Mythralia, Dungeons & Dragons, campaña, historia, personajes, razas, clases, aventura, RPG, rol, fantasía, magia, batallas, exploración, héroes, criaturas, mitología, épico" />
     <title>Galería de la campaña</title>
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
