--- a/pages/razas.html
+++ b/pages/razas.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explora la rica historia, personajes épicos y lugares mágicos de la campaña de Mythralia en nuestra página dedicada a Dungeons & Dragons. Únete a la aventura." />
-    <meta name="keywords" content="Mythralia, Dungeons & Dragons, campaña, historia, personajes, razas, clases, aventura, RPG, rol, fantasía, magia, batallas, exploración, héroes, criaturas, mitología, épico" />
+    <meta name="description"
+        content="Explora la rica historia, personajes épicos y lugares mágicos de la campaña de Mythralia en nuestra página dedicada a Dungeons & Dragons. Únete a la aventura." />
+    <meta name="keywords"
+        content="Mythralia, Dungeons & Dragons, campaña, historia, personajes, razas, clases, aventura, RPG, rol, fantasía, magia, batallas, exploración, héroes, criaturas, mitología, épico" />
     <title>Razas y clases de Mythralia</title>
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
@@ -57,7 +59,8 @@
     <main>
         <section class="races-classes">
             <h1>Razas y Clases de Mythralia</h1>
-            <h2 class="descripcion-de-razas">Mythralia es un reino diverso y mágico, hogar de una gran variedad de razas y clases que pueblan sus
+            <h2 class="descripcion-de-razas">Mythralia es un reino diverso y mágico, hogar de una gran variedad de razas
+                y clases que pueblan sus
                 vastos territorios. A continuación, exploraremos las diferentes razas y clases que habitan este mundo,
                 cada una con sus propias características únicas y habilidades especiales. Desde los valientes humanos
                 hasta los enigmáticos dracónidos, y desde los feroces guerreros hasta los sabios druidas, cada habitante
