Añadimos ALT a Razas y clases

--- a/pages/razas.html
+++ b/pages/razas.html
@@ -70,7 +70,7 @@
                 <h2 class="highlighted-title">Razas</h2>
                 <div class="card">
                     <img src="../img/razas-clases/razas/Default_A_noble_human_of_Mythralia_dressed_in_intricate_armor_1.jpg"
-                        alt="Humano">
+                        alt="Un humano de Mythralia con armadura y espada en un paisaje de ciudad medieval.">
                     <div class="card-content">
                         <h2>Humano</h2>
                         <p>Los humanos de Mythralia son versátiles y adaptables. Aunque no tienen habilidades innatas
@@ -83,7 +83,7 @@
                 </div>
                 <div class="card">
                     <img src="../img/razas-clases/razas/Default_An_elegant_elf_of_Mythralia_with_pointed_ears_and_ethe_3.jpg"
-                        alt="Elfo">
+                        alt="Una elfoa de Mythralia con orejas puntiagudas y vestimenta elegante en un entorno forestal.">
                     <div class="card-content">
                         <h2>Elfo</h2>
                         <p>Los elfos son seres de gran elegancia y longevidad. Con una vida que puede durar varios
@@ -95,7 +95,7 @@
                 </div>
                 <div class="card">
                     <img src="../img/razas-clases/razas/Default_A_stout_dwarf_blacksmith_of_Mythralia_hammering_a_redh_2.jpg"
-                        alt="Enano">
+                        alt="Un enano robusto de Mythralia con armadura de acero y barba imponente en una forja subterránea.">
                     <div class="card-content">
                         <h2>Enano</h2>
                         <p>Los enanos son robustos y trabajadores, conocidos por su resistencia física y su habilidad en
@@ -107,7 +107,7 @@
                 </div>
                 <div class="card">
                     <img src="../img/razas-clases/razas/Default_A_formidable_orc_of_Mythralia_with_green_skin_and_trib_2.jpg"
-                        alt="Orco">
+                        alt="Un orco de Mythralia con piel verde y armadura pesada en un entorno de batalla montañoso">
                     <div class="card-content">
                         <h2>Orco</h2>
                         <p>Los orcos son seres poderosos y fieros, conocidos por su valentía en combate y su resistencia
@@ -119,7 +119,7 @@
                 </div>
                 <div class="card">
                     <img src="../img/razas-clases/razas/Default_A_clever_gnome_of_Mythralia_with_a_mischievous_grin_ti_1.jpg"
-                        alt="Gnomo">
+                        alt="Un gnomo de Mythralia con vestimenta colorida y gorro, rodeado de artefactos mágicos en un taller.">
                     <div class="card-content">
                         <h2>Gnomo</h2>
                         <p>Los gnomos son pequeños, ingeniosos y llenos de curiosidad. Con una afinidad natural por la
@@ -131,7 +131,7 @@
                 </div>
                 <div class="card">
                     <img src="../img/razas-clases/razas/Default_Generate_an_image_of_a_dragonborn_sorcerer_with_scales_3.jpg"
-                        alt="Dracónido">
+                        alt="Un Draconido majestuoso de Mythralia con escamas y armadura azul brillante en un paisaje helado montañoso.">
                     <div class="card-content">
                         <h2>Dracónido</h2>
                         <p>Los dracónidos son una raza imponente, descendientes de los antiguos dragones. Poseen escamas
@@ -147,7 +147,7 @@
                 <h2 class="highlighted-title">Clases</h2>
                 <div class="card">
                     <img src="../img/razas-clases/clases/Default_A_formidable_warrior_of_Mythralia_an_elf_wielding_a_gl_1.jpg"
-                        alt="Guerrero">
+                        alt="Un guerrero de Mythralia con espada y armadura, listo para la batalla en un bosque.">
                     <div class="card-content">
                         <h2>Guerrero</h2>
                         <p>Los guerreros son los maestros del combate físico. Entrenados en el uso de una amplia gama de
@@ -159,7 +159,7 @@
                 </div>
                 <div class="card">
                     <img src="../img/razas-clases/clases/Default_A_powerful_mage_of_Mythralia_a_human_cloaked_in_shimme_1.jpg"
-                        alt="Mago">
+                        alt="Una maga de Mythralia lanzando un hechizo con una libro mágico en una biblioteca ancestral.">
                     <div class="card-content">
                         <h2>Mago</h2>
                         <p>Los magos son estudiosos de las artes arcanas, dedicando sus vidas al estudio de la magia. A
@@ -171,7 +171,7 @@
                 </div>
                 <div class="card">
                     <img src="../img/razas-clases/clases/Default_Create_an_image_of_a_halfling_rogue_nimble_and_mischie_1.jpg"
-                        alt="Pícaro">
+                        alt="Un pícaro de Mythralia con armadura oscura y espada corta, bajo la luna en un callejon de una ciudad medieval.">
                     <div class="card-content">
                         <h2>Pícaro</h2>
                         <p>Los pícaros son maestros del sigilo, el engaño y la precisión mortal. Se mueven entre las
@@ -183,7 +183,7 @@
                 </div>
                 <div class="card">
                     <img src="../img/razas-clases/clases/Default_Produce_an_image_of_a_dwarven_cleric_stout_and_heavily_2.jpg"
-                        alt="Paladín">
+                        alt="Un paladín de Mythralia con armadura brillante y cetro sagrado, en un cálido santuario.">
                     <div class="card-content">
                         <h2>Paladín</h2>
                         <p>Los paladines son guerreros sagrados, imbuidos de poderes divinos para combatir el mal y
@@ -194,7 +194,8 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="../img/razas-clases/clases/Default_one_elf_hunter_in_a_magic_forest_1.jpg" alt="Cazador">
+                    <img src="../img/razas-clases/clases/Default_one_elf_hunter_in_a_magic_forest_1.jpg"
+                        alt="Un cazador de Mythralia con una daga y una verde vestimenta, acechando en un bosque.">
                     <div class="card-content">
                         <h2>Cazador</h2>
                         <p>Los cazadores son expertos en la supervivencia y el rastreo. Con una conexión profunda con la
@@ -206,7 +207,7 @@
                 </div>
                 <div class="card">
                     <img src="../img/razas-clases/clases/Default_A_wise_dwarven_shaman_of_Mythralia_standing_in_a_sacre_2.jpg"
-                        alt="Chamán">
+                        alt="Un chamán de Mythralia con túnicas adornadas y un bastón ceremonial, realizando un ritual en una cueva ancestral.">
                     <div class="card-content">
                         <h2>Chamán</h2>
                         <p>Los chamanes son los guías espirituales y místicos de Mythralia, capaces de comunicarse con
@@ -218,7 +219,7 @@
                 </div>
                 <div class="card">
                     <img src="../img/razas-clases/clases/Default_A_serene_human_druid_of_Mythralia_standing_in_a_lush_v_3.jpg"
-                        alt="Druida">
+                        alt="Un druida de Mythralia invocando el poder de la naturaleza, en un entorno de bosque antiguo.">
                     <div class="card-content">
                         <h2>Druida</h2>
                         <p>Los druidas son los protectores de la naturaleza, capaces de transformarse en diversas
