Agregamos ALT a img de index e historia

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         </h2>
         <div class="slider-frame">
             <ul>
-                <li><img src="./img/Default_A_tall_spiraling_tower_glowing_with_magical_energy_Sma_1.jpg" alt=""></li>
-                <li><img src="./img/Default_A_dense_mystical_forest_with_towering_ancient_trees_gl_1.jpg" alt=""></li>
-                <li><img src="./img/Default_A_bustling_dwarven_forge_with_glowing_furnaces_clangin_2.jpg" alt=""></li>
-                <li><img src="./img/Default_A_vast_ancient_library_with_towering_bookshelves_magic_2.jpg" alt=""></li>
+                <li><img src="./img/Default_A_tall_spiraling_tower_glowing_with_magical_energy_Sma_1.jpg" alt="Una cripta del castillo donde un acólito se dirige hacia una puerta mágica"></li>
+                <li><img src="./img/Default_A_dense_mystical_forest_with_towering_ancient_trees_gl_1.jpg" alt="Un grupo de aventureros explorando un bosque ancestral con árboles gigantes y misteriosos"></li>
+                <li><img src="./img/Default_A_bustling_dwarven_forge_with_glowing_furnaces_clangin_2.jpg" alt="Un grupo de guerreros exploran y saquean el interior de una peligrosa mazmorra incendiándose"></li>
+                <li><img src="./img/Default_A_vast_ancient_library_with_towering_bookshelves_magic_2.jpg" alt="Un mago en una imponente biblioteca buscando un libro antiguo"></li>
             </ul>
         </div>
         <audio controls autoplay>
