--- a/pages/historia.html
+++ b/pages/historia.html
@@ -122,7 +122,8 @@
             vasto
             y mágico reino.</p>
         <div class="ranas-window-sized">
-            <img src="../img/Default_A_bustling_medieval_capital_city_with_golden_towers_co_1.jpg" alt="">
+            <img src="../img/Default_A_bustling_medieval_capital_city_with_golden_towers_co_1.jpg"
+                alt="Un mercado medieval de la capital lleno de mercaderes y frutas ">
             <a href="../index.html"><button type="button" class="btn btn-warning mx-auto d-block">Inicio</button></a>
         </div>
     </main>
