Cambios en el Banner

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a href="https://wa.me/1234567890" target="_blank">
                 <img src="./img/whatsapp.png" alt="WhatsApp">
             </a>
-            <a href="mailto:info@tusitio.com">
+            <a href="mailto:info@tusitio.com" target="_blank">
                 <img src="./img/sobre.png" alt="Email">
             </a>
         </div>
