Cambios en logo para que sea link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <div class="banner">
         <!-- Logo de la empresa -->
         <div class="logo">
-            <img src="./img/logo-dnd.png" alt="Logo de la empresa">
+            <a href="./index.html">
+                <img src="./img/logo-dnd.png" alt="Logo de la empresa">
+            </a>
             <h2 class="title">Campaña de Mythralia DnD</h2>
         </div>
 
@@ -70,10 +72,16 @@
         </h2>
         <div class="slider-frame">
             <ul>
-                <li><img src="./img/Default_A_tall_spiraling_tower_glowing_with_magical_energy_Sma_1.jpg" alt="Una cripta del castillo donde un acólito se dirige hacia una puerta mágica"></li>
-                <li><img src="./img/Default_A_dense_mystical_forest_with_towering_ancient_trees_gl_1.jpg" alt="Un grupo de aventureros explorando un bosque ancestral con árboles gigantes y misteriosos"></li>
-                <li><img src="./img/Default_A_bustling_dwarven_forge_with_glowing_furnaces_clangin_2.jpg" alt="Un grupo de guerreros exploran y saquean el interior de una peligrosa mazmorra incendiándose"></li>
-                <li><img src="./img/Default_A_vast_ancient_library_with_towering_bookshelves_magic_2.jpg" alt="Un mago en una imponente biblioteca buscando un libro antiguo"></li>
+                <li><img src="./img/Default_A_tall_spiraling_tower_glowing_with_magical_energy_Sma_1.jpg"
+                        alt="Una cripta del castillo donde un acólito se dirige hacia una puerta mágica"></li>
+                <li><img src="./img/Default_A_dense_mystical_forest_with_towering_ancient_trees_gl_1.jpg"
+                        alt="Un grupo de aventureros explorando un bosque ancestral con árboles gigantes y misteriosos">
+                </li>
+                <li><img src="./img/Default_A_bustling_dwarven_forge_with_glowing_furnaces_clangin_2.jpg"
+                        alt="Un grupo de guerreros exploran y saquean el interior de una peligrosa mazmorra incendiándose">
+                </li>
+                <li><img src="./img/Default_A_vast_ancient_library_with_towering_bookshelves_magic_2.jpg"
+                        alt="Un mago en una imponente biblioteca buscando un libro antiguo"></li>
             </ul>
         </div>
         <audio controls autoplay>
