--- a/pages/historia.html
+++ b/pages/historia.html
@@ -20,7 +20,9 @@
     <div class="banner">
         <!-- Logo de la empresa -->
         <div class="logo">
-            <img src="../img/logo-dnd.png" alt="Logo de la empresa">
+            <a href="../index.html">
+                <img src="../img/logo-dnd.png" alt="Logo de la empresa">
+            </a>
             <h2 class="title">Campaña de Mythralia DnD</h2>
         </div>
 
