Agregamos ALT a las img de galería

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -73,31 +73,40 @@
             coraje, amistad y magia que componen la esencia de Mythralia.</h2>
         <div class="galeria">
             <div class="grid-item1">
-                <img src="../img/highlights/Default_Adventurers_skirmishing_with_a_wyvern_in_a_narrow_moun_0.jpg">
+                <img src="../img/highlights/Default_Adventurers_skirmishing_with_a_wyvern_in_a_narrow_moun_0.jpg"
+                    alt="Un guerrero enfrentándose a un gran dragon de escamas azuladas en una cordillera montañosa de Mythralia">
             </div>
             <div class="grid-item2">
-                <img src="../img/highlights/Default_Adventurers_uncovering_longforgotten_ruins_in_a_dense_3.jpg">
+                <img src="../img/highlights/Default_Adventurers_uncovering_longforgotten_ruins_in_a_dense_3.jpg"
+                    alt="Un explorador llegando a las puertas de unas antiguas ruinas abandonadas llenas de vegetación y misterio">
             </div>
             <div class="grid-item3">
-                <img src="../img/highlights/Default_A_chilling_encounter_in_the_Haunted_Woods_with_adventu_1.jpg">
+                <img src="../img/highlights/Default_A_chilling_encounter_in_the_Haunted_Woods_with_adventu_1.jpg"
+                    alt="Un sombrío asesino con mascara y capa parado amenazante al lado de una pequeña fogata en el bosque prohibido">
             </div>
             <div class="grid-item4">
-                <img src="../img/highlights/Default_A_majestic_coronation_ceremony_in_the_grand_palace_of_3.jpg">
+                <img src="../img/highlights/Default_A_majestic_coronation_ceremony_in_the_grand_palace_of_3.jpg"
+                    alt="El rey de Mythralia portando su espada en una imponente sala real llena de nobles y consejeros">
             </div>
             <div class="grid-item5">
-                <img src="../img/highlights/Default_An_epic_clash_between_armies_in_the_snowcapped_Crystal_1.jpg">
+                <img src="../img/highlights/Default_An_epic_clash_between_armies_in_the_snowcapped_Crystal_1.jpg"
+                    alt="Un enfrentamiento entre guerreros en la escarpada cima de una montaña helada">
             </div>
             <div class="grid-item6">
-                <img src="../img/highlights/Default_Produce_an_image_of_a_tabaxi_bard_with_feline_features_3.jpg">
+                <img src="../img/highlights/Default_Produce_an_image_of_a_tabaxi_bard_with_feline_features_3.jpg"
+                    alt="Un bardo de raza Tabaxi cuya apariencia es de un felino antropomórfico, tocando su laúd en una taberna">
             </div>
             <div class="grid-item7">
-                <img src="../img/highlights/Default_A_dramatic_confrontation_in_the_lush_Royal_Gardens_wit_1.jpg">
+                <img src="../img/highlights/Default_A_dramatic_confrontation_in_the_lush_Royal_Gardens_wit_1.jpg"
+                    alt="Una humana de la nobleza paseando por los jardines reales entre las flores y calmadas fuentes de agua">
             </div>
             <div class="grid-item8">
-                <img src="../img/highlights/Default_A_tense_encounter_with_a_naga_in_the_overgrown_jungle_1.jpg">
+                <img src="../img/highlights/Default_A_tense_encounter_with_a_naga_in_the_overgrown_jungle_1.jpg"
+                    alt="Un guerrero y una pícara se encuentran con una Naga que defiende las antiguas ruinas de una civilazación abandonada repleta de vegetación">
             </div>
             <div class="grid-item9">
-                <img src="../img/highlights/Default_A_solemn_ceremony_under_the_full_moon_where_druids_and_0.jpg">
+                <img src="../img/highlights/Default_A_solemn_ceremony_under_the_full_moon_where_druids_and_0.jpg"
+                    alt="Una reunión entre los altos chamanes de Mythralia bajo la luz de la luna para comulgar con los espíritus ancestrales de las montañas">
             </div>
         </div>
     </main>
