--- a/pages/razas.html
+++ b/pages/razas.html
@@ -115,7 +115,7 @@
                         <p>Los orcos son seres poderosos y fieros, conocidos por su valentía en combate y su resistencia
                             física. Aunque a menudo se les ve como salvajes, tienen una rica cultura basada en la
                             fuerza, el honor y el espíritu de comunidad. Viven en tribus nómadas que recorren las
-                            tierras salvajes, cazaando y guerreando para sobrevivir. Los orcos valoran la fuerza, el
+                            tierras salvajes, cazando y guerreando para sobrevivir. Los orcos valoran la fuerza, el
                             coraje y la lealtad a su clan.</p>
                     </div>
                 </div>
