--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -21,7 +21,7 @@
             <a href="../index.html">
                 <img src="../img/logo-dnd.png" alt="Logo de la empresa">
             </a>
-            <h2 class="title">Campaña de Mythralia DnD</h2>
+            <h2 class="title">Campaña de Mythralia</h2>
         </div>
 
         <!-- Logos de redes sociales -->
