Corrección de anidación y de navbar

--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
 
     <!-- Menú principal -->
     <nav>
-        <div class="hamburger">
+        <input type="checkbox" id="menu-toggle" class="menu-toggle">
+        <label for="menu-toggle" class="hamburger">
             <div class="hamburger-line"></div>
             <div class="hamburger-line"></div>
             <div class="hamburger-line"></div>
-        </div>
+        </label>
         <ul class="menu">
             <li><a href="./pages/historia.html">HISTORIA</a></li>
             <li><a href="./pages/razas.html">RAZAS Y CLASES</a></li>
@@ -58,7 +59,7 @@
             <li><a href="./pages/contacto.html">ÚNETE A LA CAMPAÑA!</a></li>
         </ul>
     </nav>
-
+    
     <!-- Contenido principal -->
     <main class="hero">
         <h1>¡Embárcate en una Épica Aventura en el Reino de Mythralia!</h1>
