--- a/pages/razas.html
+++ b/pages/razas.html
@@ -43,11 +43,12 @@
 
     <!-- Menú principal -->
     <nav>
-        <div class="hamburger">
+        <input type="checkbox" id="menu-toggle" class="menu-toggle">
+        <label for="menu-toggle" class="hamburger">
             <div class="hamburger-line"></div>
             <div class="hamburger-line"></div>
             <div class="hamburger-line"></div>
-        </div>
+        </label>
         <ul class="menu">
             <li><a href="../index.html">INICIO</a></li>
             <li><a href="../pages/historia.html">HISTORIA</a></li>
